remove default master secret

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <div class="input-group">
                 <label>Master Secret</label>
                 <div style="position: relative;">
-                    <input type="text" id="secret" value="JBSWY3DPEHPK3PXP" oninput="updateOTP()" spellcheck="false">
+                    <input type="text" id="secret" value="" oninput="updateOTP()" spellcheck="false">
                     <span
                         style="position:absolute; right:15px; top:50%; transform:translateY(-50%); cursor:pointer; color:var(--accent); opacity:0.4"
                         onclick="toggleSecret()" id="eye-icon">
